# macdylibbundler

./: .gitignore  CMakeLists.txt  README.md
scripts/: __init__.py  bashtest.sh  common.py  qtdeploy.py  qtplugins.py  qtqml.py  test.py
src/: CMakeLists.txt  Dependency.cpp  Dependency.h  DylibBundler.cpp  Json.cpp  Settings.cpp  Settings.h  Utils.cpp  Utils.h  main.cpp  object_tool.cpp
src/argparser/: ArgParser.cpp  ArgParser.h  CMakeLists.txt
src/asyncfifo/: CMakeLists.txt  asyncfifo.cpp  asyncfifo.hpp
src/asyncfifo/examples/: CMakeLists.txt  test.py  test_common.py  test_server.py  testfifoAsync.cpp
src/common/: CMakeLists.txt  Common.cpp  Common.h  MachO.cpp  MachO.h  Tools.cpp  Tools.h  Types.cpp  Types.h  WinPort.h
src/dylib/: CMakeLists.txt  Dependency.cpp  Dependency.h  DylibBundler.cpp  DylibBundler.h  ScriptRunner.cpp  ScriptRunner.h  Settings.cpp  Settings.h  Tools.cpp  Tools.h  Utils.cpp  Utils.h
src/jsonlib/: CMakeLists.txt  Json.cpp  Json.h
src/macholib/: CMakeLists.txt  MachO.cpp  MachO.h
tests/: CMakeLists.txt  test_ArgParser.cpp  test_AsyncFifo.cpp  test_Common.cpp  test_Dylib.cpp  test_Json.cpp  test_MachO.cpp
tests/testbinaries/: buildTestBinaries.sh  testprog.arm64  testprog.c  testprog.fat  testprog.iphoneos  testprog.watchos  testprog.x86-64
tests/testbinaries/barlib/: bar.c  bar.h  libbar.arm64.dylib  libbar.iphoneos.dylib  libbar.watchos.dylib  libbar.x86-64.dylib
tests/testbinaries/foolib/: foo.c  foo.h  libfoo.arm64.dylib  libfoo.iphoneos.dylib  libfoo.watchos.dylib  libfoo.x86-64.dylib
tests/testdata/: testdata_common_otooltest.txt
